# School

./: .gitignore  BranchTest.cpp  CMakeSettings.json  README.md  cleanBuild.py  text.html
CPP Base/: CMakeLists.txt
GTC CPP 1/Final Project/: CMakeLists.txt  Final Project.sln  Player.h  customWait.cpp  game.cpp
GTC CPP 1/Final Project/Final Project/: Card.cpp  Card.h  Final Project.vcxproj  Final Project.vcxproj.filters  Main.cpp  Player.cpp  Player.h  accManip.cpp  accManip.h  classes.h  customIO.cpp  customIO.h  customWait.h  game.cpp  game.h  resources.h  smallPrint.cpp  smallPrint.h
GTC CPP 1/Final Project/Final Project/accs/: Bob-Acc.txt  Faunsce-Acc.txt  Jon-Acc.txt
GTC CPP 1/Final Project/accs/: Dylan-Acc.txt
GTC CPP 1/Midterm/: CMakeLists.txt  Midterm.sln
GTC CPP 1/Program 1 (Exercises)/: C++ HW #1.docx  Excercise 9.rap  Exercise 1.rap  Exercise 8.rap
GTC CPP 1/Program 10 - 1/: CMakeLists.txt  Funcs.h  Program 10 - 1.sln
GTC CPP 1/Program 10 - 2/: CMakeLists.txt  Program 10 - 2.sln  Structs.h
GTC CPP 1/Program 11 - 1/: CMakeLists.txt  Funcs.h  Program 11 - 1.sln
GTC CPP 1/Program 12 - 1/: CMakeLists.txt  Program 12 - 1.sln  funcs.cpp  funcs.h
GTC CPP 2/Final/: CMakeLists.txt  Funcs.cpp  Funcs.hpp  Input.tpp  Main.cpp  ParkedCar.cpp  ParkedCar.hpp  ParkingMeter.cpp  ParkingMeter.hpp  ParkingTicket.cpp  ParkingTicket.hpp  PoliceOfficer.cpp  PoliceOfficer.hpp  RandomNumber.tpp
GTC CPP 2/Midterm/: Date.cpp  (+3 more)
Program 3 - 1/: Program 3 - 1.sln
Program 4 - 1/: Program 4 - 1.sln
Program 4 - 2/: Program 4 - 2.sln
Random Scripts/: dropAll.sql
(+281 files in other folders)
